--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="#home">{{ site.title }}</a>
         </div>
@@ -18,10 +19,13 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>            
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#features">特長</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#news">ニュース</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#contact">お問合せ</a>
                 </li>
             </ul>
         </div>
