--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,13 +1,16 @@
-<section id="features">
+<section id="news">
 <!-- Page Content -->
-{% for post in site.categories.Features reversed %}
+{% for post in site.categories.News reversed %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
     {% if thecycle == 'odd' %}
     <div class="content-section-a">
 
         <div class="container">
-
             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">ニュース</h2>
+                    <h3 class="section-subheading text-muted">最新のニュースをお届けします。</h3>
+                </div>
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
@@ -15,7 +18,7 @@
                     <div class="lead">{{ post.content }}</div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
+                    <img class="img-responsive" src="img/news/{{ post.img }}" alt="">
                 </div>
             </div>
 
