--- a/_includes/features.html
+++ b/_includes/features.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">特長</h2>
-                    <h3 class="section-subheading text-muted">頭と身体と五感を総動員したプログラマのための健康増進イベント</h3>
+                    <h3 class="section-subheading text-muted">頭と身体と五感を総動員した健康増進のためのイベント</h3>
                 </div>
             </div>
 {% for post in site.categories.Features reversed %}
