Modify for publishing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 	{% include head.html %}
 
 	<body>
+		{% include google_analytics.html %}
+		{% include zenback.html %}
 		{% include header.html %}
 		{% include about.html %}
 		{% include features.html %}
