--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,16 +4,20 @@
 
 			<div class="row">
 				<div class="col-lg-6">
-					<h2>Keep in Touch:</h2>
+					<h2>お問合せ</h2>
 				</div>
+
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
 						{% for social in site.social %}
 						<li>
-							<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
+							<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
 						</li>
 						{% endfor %}
 					</ul>
+					<br/>
+					{% include mailform.html %}
+
 				</div>
 			</div>
 
