--- a/_includes/features.html
+++ b/_includes/features.html
@@ -15,7 +15,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">{{ post.title }}</h4>
                     <p class="text-muted">{{ post.content }}</p>
@@ -24,7 +24,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-tree fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">{{ post.title }}</h4>
                     <p class="text-muted">{{ post.content }}</p>
@@ -33,7 +33,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-child fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">{{ post.title }}</h4>
                     <p class="text-muted">{{ post.content }}</p>
