--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,12 +1,10 @@
 <section id="contact">
 	<div class="banner">
 		<div class="container">
-
 			<div class="row">
 				<div class="col-lg-6">
 					<h2>お問合せ</h2>
 				</div>
-
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
 						{% for social in site.social %}
@@ -14,10 +12,8 @@
 							<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
 						</li>
 						{% endfor %}
+						<li>{% include mailform.html %}</li>
 					</ul>
-					<br/>
-					<br/>
-					{% include mailform.html %}
 				</div>
 			</div>
 
