--- a/_includes/mailform.html
+++ b/_includes/mailform.html
@@ -1,8 +1,7 @@
-<!-- <form action="https://getsimpleform.com/messages?form_api_token=e570cc6a1937b4974961fbada844ecb2" method="post"> -->
-  <!-- <input type='hidden' name='redirect_to' value='http://healthhackconf.github.io/thanks/index.html' /> -->
-  <!-- <input type='text' name='email' placeholder='your@mail.address'/> -->
-  <!-- <br/> -->
-  <!-- <br/> -->
-  <!-- <input type='submit' value='最新情報を受け取る'/> -->
-<!-- </form> -->
-<script>(function(t,a,y,o,r,i){r=a.createElement(y),i=a.getElementsByTagName(y)[0];r.type='text/javascript';r.async=1;r.src='//tayori.com/form/602f4f9bd32456ae5f5c0ea04c197a521162ffbd/tag.js';r.id='tayori-tag';i.parentNode.insertBefore(r,i)})(window,document,'script');</script>
+<form action="https://getsimpleform.com/messages?form_api_token=e570cc6a1937b4974961fbada844ecb2" method="post">
+  <input type='hidden' name='redirect_to' value='http://healthhackconf.github.io/thanks/index.html' />
+  <input type='text' name='email' placeholder='your@mail.address'/>
+  <br/>
+  <br/>
+  <input type='submit' value='最新情報を受け取る'/>
+</form>
