--- a/_includes/mailform.html
+++ b/_includes/mailform.html
@@ -1,7 +1,9 @@
-<form action="https://getsimpleform.com/messages?form_api_token=e570cc6a1937b4974961fbada844ecb2" method="post">
+<!-- <form action="https://getsimpleform.com/messages?form_api_token=e570cc6a1937b4974961fbada844ecb2" method="post">
   <input type='hidden' name='redirect_to' value='http://healthhackconf.github.io/thanks/index.html' />
   <input type='text' name='email' placeholder='your@mail.address'/>
   <br/>
   <br/>
   <input type='submit' value='最新情報を受け取る'/>
 </form>
+ -->
+<iframe width="100%" height="508" allowTransparency="true" frameborder="0" scrolling="no" style="border:none" src="http://www.emailmeform.com/builder/embed/c1H9s9U0ck4"><a href="http://www.emailmeform.com/builder/embed/c1H9s9U0ck4">Fill out form.</a></iframe>
