--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,16 +1,17 @@
 <section id="news">
 <!-- Page Content -->
-{% for post in site.categories.News reversed %}
+    <div class="col-lg-12 text-center">
+        <h2 class="section-heading">ニュース</h2>
+        <h3 class="section-subheading text-muted">最新のニュースをお届けします。</h3>
+    </div>
+
+{% for post in site.categories.News %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
     {% if thecycle == 'odd' %}
     <div class="content-section-a">
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">ニュース</h2>
-                    <h3 class="section-subheading text-muted">最新のニュースをお届けします。</h3>
-                </div>
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
