--- a/_includes/mailform.html
+++ b/_includes/mailform.html
@@ -6,4 +6,5 @@
   <input type='submit' value='最新情報を受け取る'/>
 </form>
  -->
-<iframe width="100%" height="508" allowTransparency="true" frameborder="0" scrolling="no" style="border:none" src="http://www.emailmeform.com/builder/embed/c1H9s9U0ck4"><a href="http://www.emailmeform.com/builder/embed/c1H9s9U0ck4">Fill out form.</a></iframe>
+<iframe width="100%" height="475" allowTransparency="true" frameborder="0" scrolling="no" style="border:none" src="http://www.emailmeform.com/builder/embed/c1H9s9U0ck4"><a href="http://www.emailmeform.com/builder/embed/c1H9s9U0ck4">Fill out form.</a></iframe>
+<div style="margin-top:18px;text-align:center"><div id='emf_advertisement'><font face="Verdana" size="2" color="#000000">Powered by</font><span style="position: relative; padding-left: 3px; bottom: -5px;"><img src="//assets.emailmeform.com/images/footer-logo.png?RU1GLTAyLTI3" /></span><font face="Verdana" size="2" color="#000000">EMF </font><a style="text-decoration:none;" href="http://www.emailmeform.com/survey.html" target="_blank"><font face="Verdana" size="2" color="#000000">Survey</font></a></div></div>
