Modify to start entering

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,12 @@
                     <a class="page-scroll" href="#news">ニュース</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#contents">コンテンツ</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#entry">申し込み</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#contact">お問合せ</a>
                 </li>
             </ul>
