--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <section id="contact">
 	<div class="banner">
-		<div class="container">
+		<div class="container text-center">
 			<div class="row">
 				<div class="col-lg-6">
 					<h2>お問合せ</h2>
