--- a/_includes/contents.html
+++ b/_includes/contents.html
@@ -1,11 +1,56 @@
-<section id="contents" class="container content-section text-left">
-{% for post in site.categories.Contents reversed %}
-    <div class="row">
-        <hr class="section-heading-spacer">
-
-        <div class="clearfix"></div>
-        <h2 class="section-heading">{{ post.title }}</h2>
-        <div class="lead">{{ post.content }}</div>
+<section id="contents">
+<!-- Page Content -->
+    <div class="col-lg-12 text-center">
+        <h2 class="section-heading">コンテンツ</h2>
+        <h3 class="section-subheading text-muted">イベントの内容をご紹介します。</h3>
     </div>
+
+{% for post in site.categories.Contents reversed %}
+  {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+    {% if thecycle == 'odd' %}
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">{{ post.title }}</h2>
+                    <div class="lead">{{ post.content }}</div>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="img/{{ post.img }}" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+    {% else %}
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">{{ post.title }}</h2>
+                    <div class="lead">{{ post.content }}</div>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                  <img class="img-responsive" src="img/{{ post.img }}" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+    {% endif %}
 {% endfor %}
 </section>
