--- a/_includes/ogp.html
+++ b/_includes/ogp.html
@@ -3,6 +3,6 @@
 	<meta property="og:description" content="{{site.description}}" />
  	<meta property="og:site_name" content="{{ site.title }}" />
 	<meta property="og:title" content="{{site.title}}" />
-	<meta property="og:image" content="{{site.url}}/img/intro-bg-3.png" />
+	<meta property="og:image" content="{{site.url}}/img/intro-bg-3.jpg" />
 	<meta property="article:published_time" content="{{site.time | date_to_xmlschema}}" />
 	<meta property="article:author" content="http://www.facebook.com/healthhackconf" />
