--- a/_includes/twittercard.html
+++ b/_includes/twittercard.html
@@ -3,4 +3,4 @@
 	<meta name="twitter:title" content="{{site.title}}">
 	<meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
 	<meta name="twitter:description" content="{{site.description}}">
-	<meta name="twitter:image" content="{{site.url}}/img/intro-bg-3.png">
+	<meta name="twitter:image" content="{{site.url}}/img/intro-bg-3.jpg">
