Insert entry form under features.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 		{% include header.html %}
 		{% include about.html %}
 		{% include features.html %}
+		{% include entry.html %}
 		{% include news.html %}
 		{% include contents.html %}
 		{% include entry.html %}
