Add news of completion.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,7 @@
                         <a href="#contact">お問合せ</a>
                     </li>
                 </ul>
+                {% include fb-page.html %}
                 <p class="copyright text-muted small">{{ site.copyright }}</p>
             </div>
             <div class="col-md-4">
