--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,8 +12,12 @@
 							<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
 						</li>
 						{% endfor %}
-						<li>{% include mailform.html %}</li>
 					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6">
+					{% include mailform.html %}
 				</div>
 			</div>
 
