--- a/_includes/news.html
+++ b/_includes/news.html
@@ -5,7 +5,7 @@
         <h3 class="section-subheading text-muted">最新のニュースをお届けします。</h3>
     </div>
 
-{% for post in site.categories.News %}
+{% for post in site.categories.News limit:1 %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
     {% if thecycle == 'odd' %}
     <div class="content-section-a">
