--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 	{% include head.html %}
 	<body>
+    {% include fb-root.html %}
 		{% include google_analytics.html %}
 		{% include header.html %}
 		{% include about.html %}
