Add slides and remove contents and entry.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,10 +25,7 @@
                     <a class="page-scroll" href="#news">ニュース</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contents">コンテンツ</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#entry">申し込み</a>
+                    <a class="page-scroll" href="#slides">発表資料</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">お問合せ</a>
