--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,8 @@
 		{% include header.html %}
 		{% include about.html %}
 		{% include features.html %}
-		{% include entry.html %}
 		{% include news.html %}
-		{% include contents.html %}
-		{% include entry.html %}
+		{% include slides.html %}
 		{% include contact.html %}
 		{% include footer.html %}
 		{% include js.html %}
