Add sns widget.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,9 @@
                     <a class="page-scroll" href="#news">ニュース</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#sns">SNSの反応</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#slides">発表資料</a>
                 </li>
                 <li>
