--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 		{% include about.html %}
 		{% include features.html %}
 		{% include news.html %}
+		{% include sns.html %}
 		{% include slides.html %}
 		{% include contact.html %}
 		{% include footer.html %}
