Modify instagram widget and insert entry.html for accessing doorkeeper.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 		{% include news.html %}
 		{% include sns.html %}
 		{% include slides.html %}
+		{% include entry.html %}
 		{% include contact.html %}
 		{% include footer.html %}
 		{% include js.html %}
